--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "expo": "~54.0.33",
+    "expo-auth-session": "~7.0.10",
+    "expo-web-browser": "~15.0.10",
+    "firebase": "^12.2.1",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5"
